--- a/lib/Accordion/section.scss
+++ b/lib/Accordion/section.scss
@@ -1,8 +1,8 @@
-.root {
+.accordian_section_root {
     border-bottom: 1px solid rgb(var(--venia-border));
 }
 
-.root:last-of-type {
+.accordian_section_root:last-of-type {
     border-bottom-width: 0;
 }
 
