--- a/lib/Accordion/section.scss
+++ b/lib/Accordion/section.scss
@@ -25,9 +25,9 @@
 .title_container {
     cursor: pointer;
     display: flex;
-    height: 4.5rem;
+    height: 3.5rem;
     justify-content: space-between;
-    padding: 0 1.5rem;
+    padding: 1rem 1.5rem;
     width: 100%;
     background-color: white;
 }
